# doppel

./: .gitignore  AGENTS.md  IDEA.md  README.md  SECURITY.md  demo.tape  orders.csv  pyproject.toml  users.csv
.github/workflows/: ci.yml
benchmarks/: run.py
benchmarks/results/: housing.json
docs/: determinism.md  limitations.md  sql-connectors.md
examples/: README.md  customer_health.csv  saas_accounts.csv
examples/dbt_seed/: README.md
examples/github-action/: README.md  doppel-quality.yml
examples/pytest_fixture/: README.md  conftest.py  test_smoke.py
openspec/changes/add-conditional-where-filter/: design.md  proposal.md  tasks.md
openspec/changes/add-conditional-where-filter/specs/conditional-generation/: spec.md
openspec/changes/add-datetime-calendar-features/: design.md  proposal.md  tasks.md
openspec/changes/add-datetime-calendar-features/specs/datetime-calendar-features/: spec.md
openspec/changes/add-sql-warehouse-connectors/: design.md  proposal.md  tasks.md
openspec/changes/add-sql-warehouse-connectors/specs/warehouse-connectors/: spec.md
src/doppel/: __init__.py  __main__.py  dataset.py  text_policy.py
src/doppel/artifact/: __init__.py  load.py  manifest.py  safe_pickle.py  save.py
src/doppel/cli/: __init__.py  _common.py  artifact.py  diff.py  doctor.py  fit.py  gen.py  labels.py  schema.py
src/doppel/constraints/: __init__.py  derived.py  dsl.py  engine.py  expr.py  oversample.py  reject.py
src/doppel/pii/: __init__.py  detect.py  fake.py  text.py
src/doppel/pipeline/: __init__.py  fit_rows.py  pii.py  prepare.py  rng.py  single_table.py  types.py  where.py
src/doppel/quality/: __init__.py  aggregate.py  correlations.py  marginals.py  privacy.py
src/doppel/report/: __init__.py  html.py  json.py  terminal.py
src/doppel/schema/: __init__.py  datetime.py  heuristics.py  infer.py  multi.py  nullable.py  toml.py  types.py
src/doppel/sinks/: __init__.py  file.py  sql.py
src/doppel/sources/: __init__.py  errors.py  file.py  spec.py  sql.py
src/doppel/synth/: __init__.py  base.py  cart.py  cart_repair.py  hierarchy.py  multi_where.py  seed.py
tests/: conftest.py  test_artifact.py  test_artifact_cli.py  test_audit_fixes.py  test_calendar_features.py  test_cart_synth.py  test_cli_scaffold.py  test_constraints.py  test_datetime.py  test_diff_e2e.py  test_doctor.py  test_fit_sample.py  test_gen_e2e.py  test_gen_with_schema.py  test_multi_table.py  test_multi_where.py  test_oversample.py  test_pii.py  test_pii_optional.py  test_quality.py  test_real_data_fixes.py  test_real_data_smoke.py  test_review_fixes.py  test_schema_cli.py  test_schema_infer.py  test_schema_toml.py  test_seed.py  test_sinks.py  test_source_spec.py  test_sql_duckdb.py  test_sql_e2e.py  test_sql_multi_table.py  test_sql_pushdown.py  test_sql_timeout.py  test_where_cli.py  test_where_engine.py  test_where_expr.py
